tests/snapshots/localdev/grafana-config.yaml
---
# Source: grafana-config/templates/alert-source.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-alert-source
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: internal
spec:
  redirectRegex:
    regex: ^https?://([^/]+)/graph\?(?:[^#]*&)?g0\.expr=([^&#]*).*$
    replacement: https://${1}/d/alert-query/alert-query?orgId=1&var-expr=${2}
    permanent: false
